--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,6 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+tasks.named("jar") {
+	enabled = false
 }
